# bashcomp-config-svn

release-0.3/: ChangeLog  README  TODO  completion.in
tags/release-0.1/: completion.in
tags/release-0.2/: Makefile.am  completion.in
tags/release-0.3/: Makefile.am  NEWS  autogen.sh  bash-completion-config.1.in  bash-completion-config.in
tags/release-0.4/: ChangeLog  Makefile.am  configure.in
tags/release-0.5/: Makefile.am  README  TODO
tags/release-0.6/: ChangeLog  TODO
tags/release-0.7/: Makefile.am  bash-completion-config.1.in  functions.sh
tags/release-0.8/: AUTHORS  ChangeLog  Makefile.am  bash-completion-config.1.in  configure.in
trunk/: .todo  ChangeLog  Makefile.am  README  TODO  bash-completion-config  bash-completion-config.1.in  bash-completion-config.in  completion.in  configure.in  profile.d.in
