# $Id$

AC_INIT(bash-completion-config.in)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(bash-completion-config, 0.4)

test x$prefix = "xNONE" && prefix="$ac_default_prefix"
test x$datadir = "xNONE" && datadir="$ac_default_datadir"
test x$sysconfdir = "xNONE" && sysconfdir="$ac_default_sysconfdir"

# BASH may already be set in the shell, if the admin then changes the
# the /bin/sh symlink to a non-bash shell, all hell will break lose.
# thanks to James Rowe for the heads up.
unset BASH
AC_PATH_PROGS(BASH, bash)
if test x$BASH = "x"; then
    AC_MSG_ERROR([bash is required])
fi

AC_CHECK_PROGS(SED, sed)
if test x$SED = "x"; then
    AC_MSG_ERROR([sed is required])
fi

# using this rather than AC_CHECK_FILE, as it brings in gcc checks for
# some reason

AC_MSG_CHECKING([for functions.sh])
if test -e /sbin/functions.sh; then
    FUNCTIONS_SH="/sbin/functions.sh"
    AC_MSG_RESULT([yes])
else
    FUNCTIONS_SH="$datadir/$PACKAGE/functions.sh"
    AC_MSG_RESULT([no])
fi
AC_SUBST(FUNCTIONS_SH)

AC_OUTPUT(Makefile)
